Fix select and middleware with enrollments
