# grading-admin-service/src/main/java/edu/mines/gradingadmin/controllers/UserApiImpl.java
@@ -3,13 +3,16 @@ package edu.mines.gradingadmin.controllers;
 import edu.mines.gradingadmin.api.UserApiDelegate;
 import edu.mines.gradingadmin.data.CourseSlimDTO;
 import edu.mines.gradingadmin.data.CredentialDTO;
+import edu.mines.gradingadmin.data.EnrollmentDTO;
 import edu.mines.gradingadmin.data.UserDTO;
 import edu.mines.gradingadmin.factories.DTOFactory;
 import edu.mines.gradingadmin.managers.SecurityManager;
 import edu.mines.gradingadmin.models.Course;
+import edu.mines.gradingadmin.models.CourseMember;
 import edu.mines.gradingadmin.models.Credential;
 import edu.mines.gradingadmin.models.User;
 import edu.mines.gradingadmin.models.enums.CourseRole;
+import edu.mines.gradingadmin.services.CourseMemberService;
 import edu.mines.gradingadmin.services.CredentialService;
 import edu.mines.gradingadmin.services.UserService;
 import org.springframework.http.ResponseEntity;
@@ -23,12 +26,13 @@ import java.util.UUID;
 public class UserApiImpl implements UserApiDelegate {
     private final UserService userService;
     private final CredentialService credentialService;
-
+    private final CourseMemberService courseMemberService;
     private final SecurityManager securityManager;
 
-    public UserApiImpl(UserService userService, CredentialService credentialService, SecurityManager securityManager) {
+    public UserApiImpl(UserService userService, CredentialService credentialService, CourseMemberService courseMemberService, SecurityManager securityManager) {
         this.userService = userService;
         this.credentialService = credentialService;
+        this.courseMemberService = courseMemberService;
         this.securityManager = securityManager;
     }
 
@@ -50,7 +54,7 @@ public class UserApiImpl implements UserApiDelegate {
     }
 
     @Override
-    public ResponseEntity<List<CourseSlimDTO>> getEnrollments() {
+    public ResponseEntity<List<EnrollmentDTO>> getEnrollments() {
         User user = securityManager.getUser();
 
         Optional<List<Course>> enrollments = userService.getEnrollments(user.getCwid());
@@ -59,7 +63,19 @@ public class UserApiImpl implements UserApiDelegate {
             return ResponseEntity.notFound().build();
         }
 
-        return ResponseEntity.ok(enrollments.get().stream().map(DTOFactory::toSlimDto).toList());
+        return ResponseEntity.ok(enrollments.get().stream().map(course -> new EnrollmentDTO()
+                .id(course.getId().toString())
+                .term(course.getTerm())
+                .name(course.getName())
+                .code(course.getCode())
+                .cwid(user.getCwid())
+                .courseRole(
+                    EnrollmentDTO.CourseRoleEnum.fromValue(
+                        courseMemberService.getCourseMemberByCourseByCwid(course, user.getCwid())
+                            .map(member -> member.getRole().name().toLowerCase())
+                            .orElse("unknown")
+                    ))
+                ).toList());
     }
 
     @Override
